<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_shared_parameters"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_marginBottom="@dimen/baseline_typo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_parameter_point_b"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/baseline_typo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_parameter_point_b_x"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <android.support.v4.widget.Space
            android:layout_width="@dimen/baseline"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/inputPointBX"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number|numberSigned"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/baseline_typo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_parameter_point_b_y"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <android.support.v4.widget.Space
            android:layout_width="@dimen/baseline"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/inputPointBY"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number|numberSigned" />

    </LinearLayout>

    <Button
        android:id="@+id/calculatePointP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_calculate_point_p"/>

    <TextView
        android:id="@+id/outputPointP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_output_point_p_empty"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

</LinearLayout>